Fix hard to read font colors

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -150,7 +150,7 @@ section#features {
 
         min-width: 0;
 
-        color: var(--color-text-base);
+        color: #eeeef0; // var(--color-text-base);
 
         display: flex;
         flex-direction: column;
@@ -196,7 +196,7 @@ section#features {
                     }
 
                     .app-name {
-                        color: var(--color-text-highlight);
+                        color: #58c9ff; // var(--color-text-highlight);
                         text-transform: uppercase;
 
                         .brand-eyebrow-xs();
@@ -829,7 +829,6 @@ section#testimonials {
 
             &.active {
                 width: var(--active-dot-size);
-                background: linear-gradient(90deg, var(--color-primary-default), #667eea);
                 background-image: linear-gradient(to left, #58c9ff, #6b21a8);
             }
         }
